examples/consistent-hash/consistenthash.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: echo-virtualservice
spec:
  hosts:
    - echo-service
  http:
    - route:
      - destination:
          host: echo-service
          subset: all
